# autobutler

./: .gitignore  .goreleaser.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bun.lockb  compose.yml  eslint.config.js  go.mod  go.sum  log.txt  package-lock.json  package.json  playwright.config.ts  prompt.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: autobutler-build.yml  autobutler-release.yml  autobutler-test.yml  autobutler.org-cd.yml  autobutler.org-ci.yml  backend-build.yml  backend-lint.yml  (+11 more)
.thunder/: butlerapi.postman.json  butlerapi.thunder.json
apps/: README.md
cmd/: install.go
datalinks/: README.md
docs/: README.md  index.md
eslint/: eslint.config.ts
infra/: Makefile
scripts/: pistrap
src/: .goreleaser.yaml
src/autobutler/backend/: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
src/autobutler/backend/cmd/: chat.go  serve.go  version.go
src/autobutler/backend/internal/llm/: types.go
src/autobutler/backend/pkg/api/: server.go
src/autobutler/backend/pkg/chat/: types.go
src/autobutler/backend/pkg/llm/: remote.go
src/autobutler/backend/src/autobutler/: api.py  cli.py  config.py  db.py  llm.py
src/autobutler/backend/tests/: test_db.py
src/autobutler/backend/ui/components/: chat.templ  chat_templ.go
src/autobutler/backend/ui/views/: chat.templ  chat_templ.go
tests/: books.spec.ts  calendar.spec.ts  devices.spec.ts  files.spec.ts  photos.spec.ts
(+488 files in other folders)
